<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ContactNumberActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creating"
        android:textColor="@color/black"
        android:textSize="35dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/max"
        android:inputType="number"
        android:textColor="@color/grey"
        android:textColorHint="@color/dark_grey"
        android:textSize="25dp"/>


    <View
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_marginBottom='10sp'
        android:background="@color/blue" />

    <TextView
        android:id="@+id/anyeca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop='10sp'
        android:drawableRight="@drawable/ic_dropdown"
        android:layout_marginRight='20sp'
        android:layout_marginBottom='10sp'
        android:text="@string/vom"
        android:textColor="@color/black"
        android:textSize="25dp" />



    <View
        android:layout_width="70dp"
        android:layout_height="3dp"
        android:layout_marginBottom='10sp'
        android:background="@color/blue" />

    <EditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:hint="day timing"
        android:visibility="gone"
        android:textColor="@color/blue"
        android:textColorHint="@color/grey"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:hint="time"
        android:textColor="@color/blue"
        android:visibility="gone"
        android:textColorHint="@color/grey"
        android:textSize="20dp" />


    <TextView
        android:id="@+id/any"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop='10sp'
        android:drawableRight="@drawable/ic_dropdown"
        android:layout_marginRight='20sp'
        android:layout_marginBottom='10sp'
        android:text="@string/regular"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <View
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_marginBottom='10sp'
        android:background="@color/blue" />

    <EditText
        android:id="@+id/time2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:hint="day timing"
        android:visibility="gone"
        android:textColor="@color/blue" android:textColorHint="@color/grey"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/o"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:hint="time"
        android:textColor="@color/blue"
        android:visibility="gone"
        android:textColorHint="@color/grey"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="344dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_desing"
        android:text="continue"
        android:textSize="20dp" />

</LinearLayout>