<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"

    android:padding="20sp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="60sp"
        android:layout_height="50sp"
        android:src="@drawable/ic_back"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop='10sp'
        android:layout_marginRight='20sp'
        android:layout_marginBottom='10sp'
        android:text="@string/Enter"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <View
        android:layout_width="40dp"
        android:layout_height="3dp"
        android:background="@color/blue" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft='0sp'
        android:layout_marginTop='20sp'
        android:layout_marginRight='20sp'
        android:layout_marginBottom='10sp'
        android:text="@string/number"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/e1"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:hint="*"
            android:inputType="number"
            android:textSize="35sp"
            android:maxLength="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            />
        <EditText
            android:id="@+id/e2"
            android:layout_width="60sp"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:hint="*"
            android:maxLength="1"
            android:gravity="center"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"

            />
        <EditText
            android:id="@+id/e3"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:hint="*"
            android:inputType="number"
            android:maxLength="1"
            android:gravity="center"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"

            />
        <EditText
            android:id="@+id/e4"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:hint="*"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="35sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"

            />
    </LinearLayout>



<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/space20"


    android:gravity="center"
    android:layout_height="wrap_content">

    <TextView


        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_recivied"
        android:textColor="@color/black"
        android:textSize="18dp" />
    <TextView
        android:id="@+id/resend_otp"
        android:layout_marginLeft="@dimen/space20"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:textColor="@color/blue"
        android:textSize="19dp" />

</LinearLayout>
    <soup.neumorphism.NeumorphButton
        android:layout_gravity="center"
        android:id="@+id/cont"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Continue"
        android:textSize="20dp"

        android:background="@drawable/button_desing"
        android:textColor="@color/text_color"
        style="@style/Widget.Neumorph.Button">

    </soup.neumorphism.NeumorphButton>




</LinearLayout>
